--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
       <Text layoutX="189.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilastietojärjestelmä" wrappingWidth="248.13671875">
          <font>
@@ -29,6 +28,6 @@
       </Label>
       <TextField id="loginPassword" fx:id="loginPassword" layoutX="223.0" layoutY="277.0" prefHeight="32.0" prefWidth="183.0" />
       <ButtonBar layoutX="215.0" layoutY="348.0" prefHeight="40.0" prefWidth="200.0" />
-      <Button layoutX="250.0" layoutY="323.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="136.0" text="Button" />
+      <Button fx:id="loginButton" layoutX="250.0" layoutY="323.0" mnemonicParsing="false" onAction="#attemptLogin" prefHeight="25.0" prefWidth="136.0" text="Button" />
    </children>
 </AnchorPane>
