--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -28,6 +28,6 @@
       </Label>
       <TextField id="loginPassword" fx:id="loginPassword" layoutX="223.0" layoutY="277.0" prefHeight="32.0" prefWidth="183.0" />
       <ButtonBar layoutX="215.0" layoutY="348.0" prefHeight="40.0" prefWidth="200.0" />
-      <Button fx:id="loginButton" layoutX="250.0" layoutY="323.0" mnemonicParsing="false" onAction="#attemptLogin" prefHeight="25.0" prefWidth="136.0" text="Button" />
+      <Button fx:id="loginButton" layoutX="250.0" layoutY="323.0" mnemonicParsing="false" onAction="#attemptLogin" prefHeight="25.0" prefWidth="136.0" text="Kirjaudu sisään" />
    </children>
 </AnchorPane>
