--- a/src/main/resources/studentInfo.fxml
+++ b/src/main/resources/studentInfo.fxml
@@ -1,14 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="StudentInfo"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="500.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentInfoController">
+   <children>
+      <Text layoutX="422.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilasrekisteri" textAlignment="CENTER" textOrigin="CENTER">
+         <font>
+            <Font size="27.0" />
+         </font>
+      </Text>
+      <Button fx:id="ProfiiliButton" contentDisplay="RIGHT" layoutX="788.0" layoutY="24.0" mnemonicParsing="false" onAction="#openProfiiliPage" prefHeight="41.0" prefWidth="88.0" text="Profiili">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Button>
+      <Line endX="913.0" layoutX="115.0" layoutY="83.0" startX="-105.0" />
+      <Button fx:id="LogOutButton" contentDisplay="RIGHT" layoutX="915.0" layoutY="24.0" mnemonicParsing="false" onAction="#CloseProgram" prefHeight="41.0" prefWidth="88.0" text="Kirjaudu ulos" />
+      <Text layoutX="40.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilaan tiedot">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font>
+      </Text>
+      <ListView layoutX="481.0" layoutY="159.0" prefHeight="303.0" prefWidth="459.0" />
+      <VBox layoutX="40.0" layoutY="170.0" prefHeight="200.0" prefWidth="126.0">
+         <children>
+            <Label text="Nimi:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label text="Sähköposti:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label text="Puhelinnumero:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <TextField layoutX="532.0" layoutY="121.0" prefHeight="25.0" prefWidth="174.0" promptText="Syötä oppilaan nimi" />
+      <Label layoutX="481.0" layoutY="120.0" text="Haku:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button fx:id="OppilasPageSearchButton" layoutX="723.0" layoutY="120.0" mnemonicParsing="false" onAction="#searchOppilas" prefHeight="27.0" prefWidth="57.0" text="Hae" />
+      <Button fx:id="TakaisinButton" contentDisplay="RIGHT" layoutX="20.0" layoutY="26.0" mnemonicParsing="false" onAction="#navigateBackwards" prefHeight="41.0" prefWidth="88.0" text="Takaisin" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="26.0">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
