--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController" stylesheets="@loginstyles.css">
    <children>
-      <Text layoutX="189.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilastietojärjestelmä" wrappingWidth="248.13671875">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Text>
-      <TextField id="loginUsername" fx:id="loginUsername" layoutX="222.0" layoutY="187.0" prefHeight="32.0" prefWidth="183.0" />
-      <Label layoutX="266.0" layoutY="143.0" prefHeight="32.0" prefWidth="95.0" text="Käyttäjätunnus" textAlignment="CENTER" underline="true">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="287.0" layoutY="244.0" text="Salasana" textAlignment="CENTER" underline="true">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField id="loginPassword" fx:id="loginPassword" layoutX="223.0" layoutY="277.0" prefHeight="32.0" prefWidth="183.0" />
-      <ButtonBar layoutX="215.0" layoutY="348.0" prefHeight="40.0" prefWidth="200.0" />
-      <Button fx:id="loginButton" layoutX="250.0" layoutY="323.0" mnemonicParsing="false" onAction="#attemptLogin" prefHeight="25.0" prefWidth="136.0" text="Kirjaudu sisään" />
+      <VBox alignment="CENTER" layoutX="50.0" layoutY="30.0" prefHeight="300.0" prefWidth="500.0" spacing="30.0" style="-fx-padding: 0 0 50 0;">
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilastietojärjestelmä" wrappingWidth="400.0" textAlignment="CENTER">
+            <font>
+               <Font size="36.0" />
+            </font>
+         </Text>
+         <VBox alignment="CENTER" spacing="10.0">
+            <Label text="Käyttäjätunnus" textAlignment="CENTER" alignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField id="loginUsername" fx:id="loginUsername" prefHeight="32.0" prefWidth="150.0" minWidth="150.0" maxWidth="150.0" />
+            <Label text="Salasana" textAlignment="CENTER" alignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField id="loginPassword" fx:id="loginPassword" prefHeight="32.0" prefWidth="150.0" minWidth="150.0" maxWidth="150.0" />
+            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#attemptLogin" prefHeight="25.0" prefWidth="200.0" text="Kirjaudu" />
+         </VBox>
+      </VBox>
    </children>
 </AnchorPane>
