--- a/src/main/resources/mainMenu.fxml
+++ b/src/main/resources/mainMenu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainMenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainMenuController" stylesheets="@EtusivuStyles.css">
     <children>
         <ListView fx:id="ListViewMainMenu" layoutX="524.0" layoutY="169.0" prefHeight="312.0" prefWidth="377.0" AnchorPane.bottomAnchor="41.0" AnchorPane.topAnchor="169.0" />
         <Text layoutX="482.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Etusivu" textAlignment="CENTER" textOrigin="CENTER">
@@ -15,7 +15,7 @@
                 <Font size="27.0" />
             </font>
         </Text>
-        <Button fx:id="ProfiiliButton" contentDisplay="RIGHT" layoutX="778.0" layoutY="14.0" mnemonicParsing="false" onAction="#openProfiiliPage" prefHeight="41.0" prefWidth="88.0" text="Profiili" AnchorPane.rightAnchor="152.0" AnchorPane.topAnchor="14.0">
+        <Button fx:id="ProfiiliButton" contentDisplay="RIGHT" layoutX="778.0" layoutY="14.0" mnemonicParsing="false" onAction="#openProfiiliPage" prefHeight="30.0" prefWidth="70.0" text="Profiili" AnchorPane.rightAnchor="152.0" AnchorPane.topAnchor="14.0">
             <font>
                 <Font size="17.0" />
             </font>
@@ -42,6 +42,6 @@
         </Button>
         <Text layoutX="638.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tähän jokin kuvaava otsikko" />
         <Line endX="913.0" layoutX="105.0" layoutY="73.0" startX="-105.0" />
-        <Button fx:id="LogOutButton" contentDisplay="RIGHT" layoutX="905.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseProgram" prefHeight="41.0" prefWidth="88.0" text="Kirjaudu ulos" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="14.0" />
+        <Button fx:id="LogOutButton" contentDisplay="RIGHT" layoutX="905.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseProgram" prefHeight="30.0" prefWidth="70.0" text="Kirjaudu ulos" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="14.0" />
     </children>
 </AnchorPane>
