--- a/src/main/resources/EtusivuStyles.css
+++ b/src/main/resources/EtusivuStyles.css
@@ -1,42 +1,102 @@
-.anchor-pane {
-    -fx-background-color: #f0f0f0;
-}
-
-.text {
-    -fx-font-family: "Arial";
-    -fx-font-size: 24px;
-    -fx-fill: #333333;
-}
-
-.label {
-    -fx-font-family: "Arial";
-    -fx-text-fill: #555555;
+.profiili-button {
     -fx-font-size: 14px;
-}
-
-.text-field {
-    -fx-background-color: #ffffff;
-    -fx-border-color: #060606;
+    -fx-background-color: #add8e6;
+    -fx-border-color: #87ceeb;
     -fx-border-radius: 25px;
     -fx-border-width: 3px;
     -fx-background-radius: 15px;
     -fx-padding: 10px;
-    -fx-font-size: 14px;
-    -fx-alignment: center;
-}
-
-.button {
-    -fx-background-color: #ffffff;
-    -fx-border-color: #060606;
-    -fx-border-radius: 25px;
-    -fx-border-width: 3px;
-    -fx-background-radius: 15px;
-    -fx-padding: 10px;
-    -fx-font-size: 14px;
     -fx-background-insets: 3px;
 }
 
-.button:hover {
-    -fx-background-color: #ffffff;
+.profiili-button:hover {
+    -fx-background-color: #87ceeb;
 }
 
+.kurssit-button {
+    -fx-font-size: 20px;
+    -fx-background-color: #d3d3d3;
+    -fx-border-color: #060606;
+    -fx-border-radius: 25px;
+    -fx-border-width: 3px;
+    -fx-background-radius: 15px;
+    -fx-padding: 10px;
+    -fx-background-insets: 3px;
+}
+
+.kurssit-button:hover {
+    -fx-background-color: #a9a9a9;
+}
+
+.oppilaat-button {
+    -fx-font-size: 20px;
+    -fx-background-color: #d3d3d3;
+    -fx-border-color: #060606;
+    -fx-border-radius: 25px;
+    -fx-border-width: 3px;
+    -fx-background-radius: 15px;
+    -fx-padding: 10px;
+    -fx-background-insets: 3px;
+}
+
+.oppilaat-button:hover {
+    -fx-background-color: #a9a9a9;
+}
+
+.tapahtumat-button {
+    -fx-font-size: 20px;
+    -fx-background-color: #d3d3d3;
+    -fx-border-color: #060606;
+    -fx-border-radius: 25px;
+    -fx-border-width: 3px;
+    -fx-background-radius: 15px;
+    -fx-padding: 10px;
+    -fx-background-insets: 3px;
+}
+
+.tapahtumat-button:hover {
+    -fx-background-color: #a9a9a9;
+}
+
+.kalenteri-button {
+    -fx-font-size: 20px;
+    -fx-background-color: #d3d3d3;
+    -fx-border-color: #060606;
+    -fx-border-radius: 25px;
+    -fx-border-width: 3px;
+    -fx-background-radius: 15px;
+    -fx-padding: 10px;
+    -fx-background-insets: 3px;
+}
+
+.kalenteri-button:hover {
+    -fx-background-color: #a9a9a9;
+}
+
+.logout-button {
+    -fx-font-size: 14px;
+    -fx-background-color: #fa8072;
+    -fx-border-color: #da5e4e;
+    -fx-border-radius: 25px;
+    -fx-border-width: 3px;
+    -fx-background-radius: 15px;
+    -fx-padding: 10px;
+    -fx-background-insets: 3px;
+}
+
+.logout-button:hover {
+    -fx-background-color: #da5e4e;
+}
+
+.paivantapahtuma {
+    -fx-font-size: 20px;
+    -fx-font-color: #060606;
+}
+
+.main-menu-list {
+    -fx-background-color: #ffffff;
+    -fx-border-color: #060606;
+    -fx-border-radius: 10px;
+    -fx-border-width: 2px;
+    -fx-padding: 10px;
+}
