--- a/src/main/resources/profiili.fxml
+++ b/src/main/resources/profiili.fxml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="500.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProfiiliController">
     <children>
-        <Line endX="913.0" layoutX="115.0" layoutY="83.0" startX="-115.0" />
-        <Button fx:id="LogOutButton" contentDisplay="RIGHT" layoutX="915.0" layoutY="24.0" mnemonicParsing="false" onAction="#CloseProgram" prefHeight="41.0" prefWidth="88.0" text="Kirjaudu ulos" />
+        <Line endX="913.0" layoutX="115.0" layoutY="83.0" startX="-115.0" AnchorPane.topAnchor="82.5" />
+        <Button fx:id="LogOutButton" contentDisplay="RIGHT" layoutX="915.0" layoutY="24.0" mnemonicParsing="false" onAction="#CloseProgram" prefHeight="41.0" prefWidth="88.0" text="Kirjaudu ulos" AnchorPane.rightAnchor="25.5" AnchorPane.topAnchor="24.0" />
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="93.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="TakaisinButton" contentDisplay="RIGHT" layoutX="26.0" layoutY="24.0" mnemonicParsing="false" onAction="#NavigateBackwards" prefHeight="41.0" prefWidth="88.0" text="Takaisin" AnchorPane.leftAnchor="25.5" AnchorPane.topAnchor="24.0" />
+      <Line endX="100.0" layoutX="114.0" layoutY="93.0" startX="-100.0" />
+      <Line endX="-100.0" endY="149.0" layoutX="314.0" layoutY="94.0" startX="-100.0" />
+      <Line endX="100.0" layoutX="114.0" layoutY="243.0" startX="-100.0" />
+      <Line endX="-100.5" endY="148.5" layoutX="114.0" layoutY="94.0" startX="-100.0" />
+      <Label layoutX="477.0" layoutY="25.0" text="Profiili">
+         <font>
+            <Font size="27.0" />
+         </font>
+      </Label>
     </children>
 
 
