--- a/src/main/resources/studentInfo.fxml
+++ b/src/main/resources/studentInfo.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentInfoController" stylesheets="@StudentInfoStyles.css">
    <children>
-      <Text layoutX="482.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilasrekisteri" textAlignment="CENTER" textOrigin="CENTER">
+      <Text layoutX="450.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilasrekisteri" textAlignment="CENTER" textOrigin="CENTER">
          <font>
             <Font size="27.0" />
          </font>
@@ -24,38 +24,21 @@
       </Button>
       <Line endX="913.0" layoutX="105.0" layoutY="73.0" startX="-105.0" />
       <Button fx:id="LogOutButton" contentDisplay="RIGHT" layoutX="905.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseProgram" prefHeight="25.0" prefWidth="120.0" text="Kirjaudu ulos" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="14.0" styleClass="logout-button" />
-      <Text layoutX="40.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilaan tiedot">
+      <Text layoutX="40.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilaan tiedot" styleClass="info-label-title">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
       </Text>
-      <ListView fx:id="StudentListView" layoutX="481.0" layoutY="159.0" prefHeight="303.0" prefWidth="459.0" />
-      <VBox layoutX="40.0" layoutY="170.0" prefHeight="200.0" prefWidth="126.0">
+      <ListView fx:id="StudentListView" layoutX="480.0" layoutY="170.0" prefHeight="303.0" prefWidth="459.0" styleClass="list-view" />
+      <VBox layoutX="40.0" layoutY="170.0" prefHeight="200.0" prefWidth="300.0" styleClass="info-window">
          <children>
-            <Label text="Nimi:">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label text="Sähköposti:">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label text="Puhelinnumero:">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
+            <Label text="Nimi:" styleClass="info-label" />
+            <Label text="Sähköposti:" styleClass="info-label" />
+            <Label text="Puhelinnumero:" styleClass="info-label" />
          </children>
       </VBox>
-      <TextField fx:id="SearchTextField" layoutX="532.0" layoutY="121.0" prefHeight="25.0" prefWidth="174.0" promptText="Syötä oppilaan nimi" />
-      <Label layoutX="481.0" layoutY="120.0" text="Haku:">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button fx:id="OppilasPageSearchButton" layoutX="723.0" layoutY="120.0" mnemonicParsing="false" onAction="#searchOppilas" prefHeight="27.0" prefWidth="57.0" text="Hae" styleClass="search-button" />
+      <TextField fx:id="SearchTextField" layoutX="480.0" layoutY="110.0" prefHeight="22.0" prefWidth="200.0" promptText="Syötä oppilaan nimi" styleClass="search-text" />
+      <Button fx:id="OppilasPageSearchButton" layoutX="700.0" layoutY="110.0" mnemonicParsing="false" onAction="#searchOppilas" prefHeight="22.0" prefWidth="55.0" text="Hae" styleClass="search-button" />
       <Button fx:id="TakaisinButton" contentDisplay="RIGHT" layoutX="20.0" layoutY="14.0" mnemonicParsing="false" onAction="#navigateBackwards" prefHeight="25.0" prefWidth="90.0" text="Takaisin" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="14.0" styleClass="back-button">
          <font>
             <Font size="17.0" />
