--- a/src/main/resources/kurssit.fxml
+++ b/src/main/resources/kurssit.fxml
@@ -3,16 +3,19 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@StudentInfoStyles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.KurssitController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@StudentInfoStyles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.KurssitController">
    <children>
-      <Text layoutX="450.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilasrekisteri" textAlignment="CENTER" textOrigin="CENTER">
+      <Text layoutX="450.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kurssit" textAlignment="CENTER" textOrigin="CENTER">
          <font>
             <Font size="27.0" />
          </font>
@@ -29,17 +32,42 @@
             <Font name="System Bold" size="19.0" />
          </font>
       </Text>
-      <ListView fx:id="CourseListView" layoutX="480.0" layoutY="170.0" prefHeight="303.0" prefWidth="459.0" styleClass="list-view" />
-      <VBox layoutX="40.0" layoutY="170.0" prefHeight="318.0" prefWidth="300.0" styleClass="info-window">
+      <ListView fx:id="CourseListView" layoutX="480.0" layoutY="178.0" prefHeight="303.0" prefWidth="459.0" styleClass="list-view" />
+
+      <GridPane hgap="10" layoutX="40.0" layoutY="170.0" prefHeight="318.0" prefWidth="400.0" styleClass="info-window" vgap="10">
+         <columnConstraints>
+            <ColumnConstraints hgrow="NEVER" minWidth="110.0" />
+            <ColumnConstraints hgrow="ALWAYS" />
+         </columnConstraints>
          <children>
-            <Label styleClass="info-label" text="Kurssin id:" />
-            <Label styleClass="info-label" text="Kurssin nimi:" />
-            <Label styleClass="info-label" text="Opettaja:" />
-            <Label styleClass="info-label" text="Aloitus pvm:" />
-            <Label styleClass="info-label" text="Lopetus pvm:" />
-            <Label styleClass="info-label" text="Kuvaus:" />
+            <Label styleClass="info-label" text="Tunnus:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <Text fx:id="tunnusText" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+            <Label styleClass="info-label" text="Nimi:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <Text fx:id="nimiText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+            <Label styleClass="info-label" text="Opettaja:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <Text fx:id="opettajaText" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+            <Label styleClass="info-label" text="Aloitus Pvm:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+            <Text fx:id="aloitusPvmText" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+
+            <Label styleClass="info-label" text="Lopetus Pvm:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+            <Text fx:id="lopetusPvmText" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+
+            <Label styleClass="info-label" text="Kuvaus:" GridPane.columnIndex="0" GridPane.rowIndex="5" GridPane.valignment="TOP" />
+            <TextArea fx:id="kuvausTextArea" prefHeight="100" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
-      </VBox>
+         <rowConstraints>
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints>
+      </GridPane>
+
       <TextField fx:id="SearchTextField" layoutX="480.0" layoutY="110.0" prefHeight="22.0" prefWidth="200.0" promptText="Hae kurssia" styleClass="search-text" />
       <Button fx:id="CoursePageSearchButton" layoutX="700.0" layoutY="110.0" mnemonicParsing="false" onAction="#searchCourse" prefHeight="22.0" prefWidth="55.0" styleClass="search-button" text="Hae" />
       <Button fx:id="TakaisinButton" contentDisplay="RIGHT" layoutX="20.0" layoutY="14.0" mnemonicParsing="false" onAction="#navigateBackwards" prefHeight="25.0" prefWidth="90.0" styleClass="back-button" text="Takaisin" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="14.0">
