--- a/src/main/resources/kurssit.fxml
+++ b/src/main/resources/kurssit.fxml
@@ -47,19 +47,22 @@
             <Text fx:id="opettajaField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
             <Label styleClass="info-label" text="Nimi:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <TextField fx:id="nimiField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Text fx:id="nimiField"  GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
             <Label styleClass="info-label" text="Aloitus Pvm:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <TextField fx:id="aloitusPvmField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Text fx:id="aloitusPvmField"  GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
             <Label styleClass="info-label" text="Lopetus Pvm:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-            <TextField fx:id="lopetusPvmField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Text fx:id="lopetusPvmField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
             <Label styleClass="info-label" text="Kuvaus:" GridPane.columnIndex="0" GridPane.rowIndex="5" GridPane.valignment="TOP" />
             <TextArea fx:id="kuvausTextArea" editable="false" prefHeight="100" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
             <Button fx:id="editSaveButton" onAction="#handleEditSave" text="Muokkaa" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+            <Button fx:id="createNewCourseButton" layoutX="150.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleCreateNewCourse" prefHeight="25.0" prefWidth="120.0" text="Luo uusi kurssi" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
          </children>
+
+
          <rowConstraints>
             <RowConstraints />
             <RowConstraints />
@@ -69,6 +72,8 @@
             <RowConstraints />
             <RowConstraints />
          </rowConstraints>
+
+
       </GridPane>
 
       <TextField fx:id="SearchTextField" layoutX="480.0" layoutY="110.0" prefHeight="22.0" prefWidth="200.0" promptText="Hae kurssia" styleClass="search-text" />
