--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController" stylesheets="@loginstyles.css">
    <children>
       <VBox alignment="CENTER" layoutX="50.0" layoutY="30.0" prefHeight="300.0" prefWidth="500.0" spacing="30.0" style="-fx-padding: 0 0 50 0;">
@@ -28,7 +29,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField id="loginPassword" fx:id="loginPassword" prefHeight="32.0" prefWidth="150.0" minWidth="150.0" maxWidth="150.0" />
+            <PasswordField id="loginPassword" fx:id="loginPassword" prefHeight="32.0" prefWidth="150.0" minWidth="150.0" maxWidth="150.0" />
             <Button fx:id="loginButton" mnemonicParsing="false" onAction="#attemptLogin" prefHeight="25.0" prefWidth="200.0" text="Kirjaudu" />
          </VBox>
       </VBox>
