--- a/src/main/resources/profiili.fxml
+++ b/src/main/resources/profiili.fxml
@@ -3,9 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
@@ -20,42 +21,46 @@
             </font>
         </Label>
         <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true" styleClass="image-view-border" />
-          <VBox layoutX="16.0" layoutY="340.0" prefHeight="195.0" prefWidth="470.0" spacing="25.0">
-              <children>
-                  <Label fx:id="OpettajaIdLabel" text="Opettaja Id: ">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <padding>
-                  <Insets left="3.0" />
-               </padding>
-            </Label>
-                  <Label fx:id="EtunimiLabel" text="Etunimi: ">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <padding>
-                  <Insets left="3.0" />
-               </padding>
-            </Label>
-                  <Label fx:id="SukunimiLabel" text="Sukunimi: ">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <padding>
-                  <Insets left="3.0" />
-               </padding>
-            </Label>
-                  <Label fx:id="SahkopostiLabel" text="Sähköposti: ">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <padding>
-                  <Insets left="3.0" />
-               </padding>
-            </Label>
-              </children>
-          </VBox>
-      <Button fx:id="ProfiiliMuokkaaButton" layoutX="764.0" layoutY="18.0" mnemonicParsing="false" onAction="#muokkaaProfiilia" prefHeight="39.0" prefWidth="90.0" text="Muokkaa" />
+        <GridPane layoutX="16.0" layoutY="340.0" hgap="10" vgap="10">
+            <children>
+                <Label fx:id="OpettajaIdLabel" text="Opettaja Id: " GridPane.rowIndex="0" GridPane.columnIndex="0">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                    <padding>
+                        <Insets left="3.0" />
+                    </padding>
+                </Label>
+                <Label fx:id="EtunimiLabel" text="Etunimi: " GridPane.rowIndex="1" GridPane.columnIndex="0">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                    <padding>
+                        <Insets left="3.0" />
+                    </padding>
+                </Label>
+                <TextField fx:id="EtunimiTextField" visible="false" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+                <Label fx:id="SukunimiLabel" text="Sukunimi: " GridPane.rowIndex="2" GridPane.columnIndex="0">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                    <padding>
+                        <Insets left="3.0" />
+                    </padding>
+                </Label>
+                <TextField fx:id="SukunimiTextField" visible="false" GridPane.rowIndex="2" GridPane.columnIndex="1" />
+                <Label fx:id="SahkopostiLabel" text="Sähköposti: " GridPane.rowIndex="3" GridPane.columnIndex="0">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                    <padding>
+                        <Insets left="3.0" />
+                    </padding>
+                </Label>
+                <TextField fx:id="SahkopostiTextField" visible="false" GridPane.rowIndex="3" GridPane.columnIndex="1" />
+            </children>
+        </GridPane>
+        <Button fx:id="ProfiiliMuokkaaButton" layoutX="22.0" layoutY="535.0" mnemonicParsing="false" onAction="#muokkaaProfiilia" prefHeight="39.0" prefWidth="86.0" text="Muokkaa" />
+        <Button fx:id="ProfiiliTallennaButton" layoutX="128.0" layoutY="535.0" mnemonicParsing="false" onAction="#tallennaMuutokset" prefHeight="39.0" prefWidth="86.0" text="Tallenna" visible="false" />
     </children>
 </AnchorPane>
